fix: better layout + correct WCA Live ID adjust centering of minipage via border keep track also of deleted registrations to get the full index as visible on cards+Live

--- a/labels-template.tex
+++ b/labels-template.tex
@@ -21,13 +21,14 @@
 \TopPageMargin=11mm
 \BottomPageMargin=11mm
 \InterLabelRow=0mm
-\LeftLabelBorder=5mm
-\RightLabelBorder=5mm
+\LeftLabelBorder=0mm
+\RightLabelBorder=0mm
 \TopLabelBorder=5mm
 \BottomLabelBorder=5mm
 % Create an empty label; for if the label has already been used
 \newcommand{\emptylabel}{\rule{0mm}{22mm}}
-
+%\fboxrule=1pt
+%\fboxsep=0pt
 \begin{document}
 % This is where your labels go
 \addresslabel{\centering{\selectlanguage{english} Nice Competition 2024\vspace{1.1em} \Huge \\ \textbf{\centering \begin{minipage}{82mm}\centering Some Cuber\end{minipage}}}\\ \selectlanguage{english} \ \\ \textcolor{red}{Delegate, Organizer} \\ \selectlanguage{english} \begin{tabular}{lcr}	\qquad &  \qquad & \qquad  \\1234DELE01&Country& ID: 1\\ \end{tabular}}
