Closes #7; fix: newcomer colour was hardly readable, now green

--- a/labels-template.tex
+++ b/labels-template.tex
@@ -6,12 +6,10 @@
 \usepackage[english, russian]{babel}
 \usepackage{CJKutf8}
 \usepackage{tgpagella} % Default fonts
-%\usepackage{calligra} % Font for the addresses
 \usepackage{cmbright} % sans serif everywhere
-%\usepackage{avant}
 \usepackage{helvet}
 
-\usepackage{xcolor}
+\usepackage[dvipsnames]{xcolor}
 \usepackage[newdimens]{labels}
 \LabelGridtrue
 \LabelCols=2
@@ -31,9 +29,9 @@
 %\fboxsep=0pt
 \begin{document}
 % This is where your labels go
-\addresslabel{\centering{\selectlanguage{english} Nice Competition 2024\vspace{1.1em} \Huge \\ \textbf{\centering \begin{minipage}{82mm}\centering Some Cuber\end{minipage}}}\\ \selectlanguage{english} \ \\ \textcolor{red}{Delegate, Organizer} \\ \selectlanguage{english} \begin{tabular}{lcr}	\qquad &  \qquad & \qquad  \\1234DELE01&Country& ID: 1\\ \end{tabular}}
-\addresslabel{\centering{\selectlanguage{english} Nice Competition 2024\vspace{1.1em} \Huge \\ \textbf{\centering \begin{minipage}{82mm}\centering Another Cuber\end{minipage}}}\\ \selectlanguage{english} \ \\ \textcolor{red}{Organizer} \\ \selectlanguage{english} \begin{tabular}{lcr}	\qquad &  \qquad & \qquad  \\1234ORGA01&Country& ID: 2\\ \end{tabular}}
-\addresslabel{\centering{\selectlanguage{english} Nice Competition 2024\vspace{1.1em} \Huge \\ \textbf{\centering \begin{minipage}{82mm}\centering More People\end{minipage}}}\\ \selectlanguage{english} \ \\ \textcolor{red}{Delegate} \\ \selectlanguage{english} \begin{tabular}{lcr}	\qquad &  \qquad & \qquad  \\1234TRAI01&Country& ID: 3\\ \end{tabular}}
-\addresslabel{\centering{\selectlanguage{english} Nice Competition 2024\vspace{1.1em} \Huge \\ \textbf{\centering \begin{minipage}{82mm}\centering Short Name\end{minipage}\vspace{1.5mm}}}\\ \begin{CJK*}{UTF8}{gbsn} (魔方) \end{CJK*}\\ \selectlanguage{english} \begin{tabular}{lcr}	\qquad &  \qquad & \qquad  \\\textcolor{yellow}{Newcomer}&China& ID: 10\\ \end{tabular}}
+\addresslabel{\centering{\selectlanguage{english} Nice Competition 2024\vspace{1.1em} \Huge \\ \textbf{\centering \begin{minipage}{82mm}\centering Some Cuber\end{minipage}}}\\ \selectlanguage{english} \ \\ \textcolor{Red}{Delegate, Organizer} \\ \selectlanguage{english} \begin{tabular}{lcr}	\qquad &  \qquad & \qquad  \\1234DELE01&Country& ID: 1\\ \end{tabular}}
+\addresslabel{\centering{\selectlanguage{english} Nice Competition 2024\vspace{1.1em} \Huge \\ \textbf{\centering \begin{minipage}{82mm}\centering Another Cuber\end{minipage}}}\\ \selectlanguage{english} \ \\ \textcolor{Red}{Organizer} \\ \selectlanguage{english} \begin{tabular}{lcr}	\qquad &  \qquad & \qquad  \\1234ORGA01&Country& ID: 2\\ \end{tabular}}
+\addresslabel{\centering{\selectlanguage{english} Nice Competition 2024\vspace{1.1em} \Huge \\ \textbf{\centering \begin{minipage}{82mm}\centering More People\end{minipage}}}\\ \selectlanguage{english} \ \\ \textcolor{Red}{Delegate} \\ \selectlanguage{english} \begin{tabular}{lcr}	\qquad &  \qquad & \qquad  \\1234TRAI01&Country& ID: 3\\ \end{tabular}}
+\addresslabel{\centering{\selectlanguage{english} Nice Competition 2024\vspace{1.1em} \Huge \\ \textbf{\centering \begin{minipage}{82mm}\centering Short Name\end{minipage}\vspace{1.5mm}}}\\ \begin{CJK*}{UTF8}{gbsn} (魔方) \end{CJK*}\\ \selectlanguage{english} \begin{tabular}{lcr}	\qquad &  \qquad & \qquad  \\\textcolor{ForestGreen}{Newcomer}&China& ID: 10\\ \end{tabular}}
 \addresslabel{\centering{\selectlanguage{english} Nice Competition 2024\vspace{1.1em} \Huge \\ \textbf{\centering \begin{minipage}{82mm}\centering Long English Name and translation\end{minipage}\vspace{1.5mm}}}\\ \selectlanguage{russian} (Аа Жж Яя)\\ \selectlanguage{english} \begin{tabular}{lcr}	\qquad &  \qquad & \qquad  \\2024TODO01&Country& ID: 42\\ \end{tabular}}
 \end{document}
