tex: woher soll ich wissen was ich hier tue, latex ist nur ein großen macro geschiebe und gehoffe (ernsthaft, wer versteht das schon)

--- a/tex/labels-template.tex
+++ b/tex/labels-template.tex
@@ -6,6 +6,17 @@
 % use the corresponding paper size for your ticket definition
 \documentclass[a4paper,12pt]{article}
 
+% load misc stuff
+\usepackage{graphicx}
+\usepackage{anyfontsize}
+\usepackage[table]{xcolor} 
+\usepackage{graphicx}
+
+% language stuff
+\usepackage[ngerman]{babel}
+\usepackage[utf8]{inputenc}
+\usepackage{CJK}
+
 % load ticket.sty with the appropriate ticket definition
 \usepackage[flashCard,boxed]{ticket} %boxes
 
@@ -13,12 +24,6 @@
 \unitlength=1mm
 \ticketSize{82}{55}
 \ticketNumbers{2}{5}
-
-% load misc stuff
-\usepackage{graphicx}
-\usepackage{anyfontsize}
-\usepackage[table]{xcolor} 
-\usepackage{graphicx}
 
 %% --- front ----%
 % default nametag. \ticketdefault is somewhat like a background
