newcomer in green, optionally print orga and delegate roles on nametag

--- a/tex/labels-template.tex
+++ b/tex/labels-template.tex
@@ -9,7 +9,7 @@
 % load misc stuff
 \usepackage{graphicx}
 \usepackage{anyfontsize}
-\usepackage[table]{xcolor} 
+\usepackage[dvipsnames, table]{xcolor}
 \usepackage{graphicx}
 
 % language stuff
@@ -36,7 +36,7 @@
 \newcommand{\card}[5]{\ticket{%
     \put(41,36){\makebox[0mm]{\bfseries\Large #1}}%todo mit zu langen namen umgehen
     \put(41,30){\makebox[0mm]{\bfseries #2}}%
-    \put(41,26){\makebox[0mm]{id: #4}}%
+    \put(41,25.5){\makebox[0mm]{id: #4}}%
     \put(41,20){\makebox[0mm]{\bfseries\large #3}}%
 }}
 
