cyrill letters support

--- a/tex/labels-template.tex
+++ b/tex/labels-template.tex
@@ -14,8 +14,9 @@
 \usepackage{adjustbox}
 
 % language stuff
-\usepackage[ngerman]{babel}
+\usepackage[OT2, T1]{fontenc}
 \usepackage[utf8]{inputenc}
+\usepackage[russian,english]{babel}
 \usepackage{CJK}
 
 % load ticket.sty with the appropriate ticket definition
